--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
     "nodemon": "^3.1.9"
   },
   "dependencies": {
+    "@types/express-session": "^1.18.1",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "mongodb": "^6.16.0",
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2"
